tests/lang/errors/undefined_name.hawk
//! spec: name-undefined
//! mode: check

fn main() -> Int {
    return missing;              // expect error: undefined name
}
